Add header section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,15 @@
+@import '__helpers/colors';
+@import '__helpers/fonts';
+@import '__helpers/general';
+@import '__helpers/typography';
 
+
+@import '__components/btn';
+@import '__components/header';
+@import '__components/hero';
+@import '__components/link';
+@import '__components/stars';
+@import '__components/tick';
 
 
 
