--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,10 +4,14 @@
 @import '__helpers/typography';
 
 
+@import '__components/about';
 @import '__components/btn';
-@import '__components/header';
+@import '__components/diversify';
+@import '__components/footer';
 @import '__components/hero';
 @import '__components/link';
+@import '__components/menu';
+@import '__components/pros';
 @import '__components/stars';
 @import '__components/tick';
 
