--- a/src/scss/__components/_btn.scss
+++ b/src/scss/__components/_btn.scss
@@ -5,6 +5,7 @@
     padding: 20px;
     background-color: $color-primary;
     color: $color-secondary;
+    transition: all .5s;
     font-family: $font-primary-bold;
     border-radius: 5px;
     height: 60px;
@@ -34,5 +35,19 @@
     &__text {
         z-index: 1;
         position: relative;
+    }
+
+    &--secondary {
+        background-color: $white;
+        color: $color-primary;
+
+        &:hover {
+            color: $white;
+        }
+
+        &::after {
+            background-color: $color-primary;
+            opacity: .9;
+        }
     }
 }
